syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package ds_project;


message DsProject {

     int32 id=1 ;
     optional string name=2 ;
     int64 code=3 ;
     optional string description=4 ;
     optional int32 user_id=5 ;
     optional int32  flag=6 ;
     optional string  create_time=7 ;
     optional string  update_time=8 ;
}


// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsProjectService {
  rpc ListDsProjects(ListDsProjectsRequest) returns (ListDsProjectsResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsProjects"
    };
  }

  rpc GetDsProject(GetDsProjectRequest) returns (DsProject) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsProjects/*}"
    };
  }

  rpc CreateDsProject(CreateDsProjectRequest) returns (DsProject) {
    option (google.api.http) = {
      post: "/v1alpha1/DsProjects"
      body: "DsProject"
    };
  }

  rpc UpdateDsProject(UpdateDsProjectRequest) returns (DsProject) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsProject.name=DsProjects/*}"
      body: "DsProject"
    };
  }

  rpc DeleteDsProject(DeleteDsProjectRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsProjects/*}"
    };
  }
}

// message DsProject {
// ! This should be defined elsewhere
// }

message ListDsProjectsRequest {


  // The maximum number of items to return.
  int64 page_size = 1;

  int64 page_num = 2;
  optional string search_val=3 ;
}

message ListDsProjectsResponse {
  // The field name should match the noun "DsProject" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsProjectListRes total_list = 1;

  int64 current_page = 2;
  int64 page_size = 3;
  int64 start = 4;
  int64 total = 5;
  int64 total_page = 6;
}
message DsProjectListRes {

     int32 id=1 ;
     optional string name=2 ;
     int64 code=3 ;
     optional string description=4 ;
     optional int32 user_id=5 ;
     optional int32  flag=6 ;
     optional string  create_time=7 ;
     optional string  update_time=8 ;
     string user_name=9 ;
}



message GetDsProjectRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsProjectRequest {
  string name = 1;
  
  optional string description=3 ;
  int32 user_id=4 ;

}

message UpdateDsProjectRequest {
  string name = 1;
  
  optional string description=3 ;
  int32 user_id=4 ;
}

message DeleteDsProjectRequest {
 int32 id = 1;
}
