syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package ds_worker_group;

message DsWorkerGroup {

    int64 id=1 ;
    string name=2 ;
    optional string addr_list=3 ;
    optional string create_time=4 ;
    optional string update_time=5 ;
}

// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsWorkerGroupService {
  rpc ListDsWorkerGroups(ListDsWorkerGroupsRequest) returns (ListDsWorkerGroupsResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsWorkerGroups"
    };
  }

  rpc GetDsWorkerGroup(GetDsWorkerGroupRequest) returns (DsWorkerGroup) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsWorkerGroups/*}"
    };
  }

  rpc CreateDsWorkerGroup(CreateDsWorkerGroupRequest) returns (DsWorkerGroup) {
    option (google.api.http) = {
      post: "/v1alpha1/DsWorkerGroups"
      body: "DsWorkerGroup"
    };
  }

  rpc UpdateDsWorkerGroup(UpdateDsWorkerGroupRequest) returns (DsWorkerGroup) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsWorkerGroup.name=DsWorkerGroups/*}"
      body: "DsWorkerGroup"
    };
  }

  rpc DeleteDsWorkerGroup(DeleteDsWorkerGroupRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsWorkerGroups/*}"
    };
  }
  rpc AllDsWorkerGroups(google.protobuf.Empty) returns (AllDsWorkerGroupsResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsWorkerGroups/all"
    };
  }
}

// message DsWorkerGroup {
// ! This should be defined elsewhere
// }

message ListDsWorkerGroupsRequest {


  // The maximum number of items to return.
  uint64 page_size = 1;

  uint64 page_num = 2;
  optional string search_val=3 ;
}

message ListDsWorkerGroupsResponse {
  repeated DsWorkerGroup total_list = 1;
  uint64 current_page = 2;
  uint64 page_size = 3;
  uint64 start = 4;
  uint64 total = 5;
  uint64 total_page = 6;
}
message AllDsWorkerGroupsResponse {
  repeated string data = 1;
}

message GetDsWorkerGroupRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsWorkerGroupRequest {

    string name=1 ;
    optional string addr_list=2 ;

}

message UpdateDsWorkerGroupRequest {

    int64 id=1 ;
    string name=2 ;
    optional string addr_list=3 ;
}

message DeleteDsWorkerGroupRequest {
  // The resource name of the DsWorkerGroup to be deleted.
  int32 id = 1;
}
